tabbed view with floating action button added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,18 @@
                 android:id="@+id/tabbed_view"
                 android:text="Tabbed View" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/done_bar"
+                android:text="done bar"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/Tab_with_float"
+                android:text="Tab with Float"/>
+
         </LinearLayout>
     </ScrollView>
 
